# Rent-A-Purr

./: .gitignore  CMakeLists.txt  DataBase.cpp  DataBase.h  Handler.cpp  Handler.h  README.md  main.cpp
DataBase/: CatsDataBase.db
rent-a-purr/src/api/: index.js  mockindex.js
rent-a-purr/src/components/: addreq.jsx  adduser.jsx  card.jsx  editcat.jsx  editreq.jsx  layout.jsx
rent-a-purr/src/pages/: account.jsx  catalogue.jsx  managment.jsx
